@@ -262,3 +262,22 @@ name: with link in square brackets
 in:  This is an [!image.jpg!:http://example.com/] you see.
 html: <p>This is an <a href="http://example.com/"><img src="image.jpg" alt="" /></a> you see.</p>
 disable_inline_images: <p>This is an [!image.jpg!:<a href="http://example.com">http://example.com</a>/] you see.</p>
+---
+name: url containing parentheses
+in: "!http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg!"
+html: |-
+  <p><img src="http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg" alt="" /></p>
+disable_inline_images: "<p>!<a href=\"http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg\">http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg</a>!</p>"
+---
+name: with alt and url containing parentheses
+in: "!http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg(a big rock)!"
+html: |-
+  <p><img src="http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg" title="a big rock" alt="a big rock" /></p>
+#TODO: below is non-ideal
+disable_inline_images: "<p>!<a href=\"http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg(a\">http://commons.wikimedia.org/wiki/File:Rubis_sur_calcite_2(Vietnam).jpg(a</a> big rock)!</p>"
+---
+name: with link that contains parentheses
+in: "!image.jpg(Alt text with (parentheses).)!"
+html: |-
+  <p><img src="image.jpg" title="Alt text with (parentheses)." alt="Alt text with (parentheses)." /></p>
+disable_inline_images: "<p>!image.jpg(Alt text with (parentheses).)!</p>"
